# billy-the-game

./: CMakeLists.txt  README.md
assets/billy-assets/materials/: Cow.mtl  grass.mtl  lava.mtl  path.mtl
assets/debug/: debug.mtl
assets/grass/: grass.mtl
assets/materials/: Cow.mtl  Sphere.mtl  Tree.mtl  billy_map.mtl  debug.mtl  floor.mtl  fplane.mtl  grass.mtl  grass2.mtl  house1_a.mtl  house1_b.mtl  lowpolytree.mtl  particle.mtl  path.mtl  plane.mtl  player.mtl  roguelikeSheet_transparent.mtl  sphere.mtl  static_map.mtl  tavern_1a.mtl  tavern_1b.mtl  teapot.mtl  treasure.mtl  wall.mtl  wall2.mtl  water.mtl
assets/path/: path.mtl
assets/player/: player.mtl
assets/snake-assets/materials/: background.mtl  debug.mtl  food.mtl  snake.mtl  wall.mtl
assets/treasure/: treasure.mtl
assets/wall/: wall.mtl
shaders/: FragmentShader.glsl  VertexShader.glsl
src/lib/: CMakeLists.txt  SetupEnvironment.cmake
src/lib/debug_tools/: Assert.hpp  CMakeLists.txt  CodeReminder.hpp  Colors.cpp  Colors.hpp  Console.cpp  Console.hpp  FileLog.cpp  FileLog.hpp  Levels.cpp  Levels.hpp  Timer.cpp  Timer.hpp  Timestamp.cpp  Timestamp.hpp  test.cpp
src/lib/game_engine/: AssetManager.cpp  AssetManager.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Collision.cpp  Collision.hpp  ConfigurationFile.cpp  ConfigurationFile.hpp  ConsoleParser.cpp  ConsoleParser.hpp  ControlInput.hpp  Controls.hpp  Debugger.cpp  Debugger.hpp  ErrorCodes.cpp  ErrorCodes.hpp  FileIO.cpp  FileIO.hpp  FrameRateRegulator.cpp  FrameRateRegulator.hpp  GameEngine.cpp  GameEngine.hpp  GameSector.cpp  GameSector.hpp  GameWorld.cpp  GameWorld.hpp  HelpFunctions.cpp  HelpFunctions.hpp  ObjLoad.cpp  ObjLoad.hpp  Renderer.cpp  Renderer.hpp  World.hpp  WorldObject.cpp  WorldObject.hpp  WorldSector.cpp  WorldSector.hpp
src/lib/game_engine/core/: ConfigurationFile.cpp  ConfigurationFile.hpp  ConsoleParser.cpp  ConsoleParser.hpp  Debugger.cpp  Debugger.hpp  ErrorCodes.hpp  FileIO.cpp  FileSystem.cpp  FileSystem.hpp  GameEngine.cpp  GameEngine.hpp  InteractableObject.hpp  WorldObject.hpp  WorldSector.cpp  WorldSector.hpp
src/lib/game_engine/graphics/: AssetManager.cpp  AssetManager.hpp  AssimpHelp.cpp  AssimpHelp.hpp  Frustum.cpp  Frustum.hpp  GraphicsObject.cpp  GraphicsObject.hpp  GraphicsTypes.cpp  GraphicsTypes.hpp  Instancing.cpp  Instancing.hpp  Light.cpp  Light.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Renderer.cpp  Renderer.hpp
src/lib/game_engine/graphics/opengl/: OpenGLCShadowMaps.cpp  OpenGLCShadowMaps.hpp  OpenGLCamera.cpp  OpenGLCamera.hpp  OpenGLContext.cpp  OpenGLContext.hpp  OpenGLCubemap.cpp  OpenGLCubemap.hpp  OpenGLFont.cpp  OpenGLFont.hpp  OpenGLFrameBufferTexture.cpp  OpenGLFrameBufferTexture.hpp  OpenGLGBuffer.cpp  OpenGLGBuffer.hpp  OpenGLObject.cpp  OpenGLObject.hpp  OpenGLQuery.cpp  OpenGLQuery.hpp  OpenGLRenderer.cpp  OpenGLRenderer.hpp  OpenGLShaders.cpp  OpenGLShaders.hpp  OpenGLShadowMap.cpp  OpenGLShadowMap.hpp  OpenGLText.cpp  OpenGLText.hpp  OpenGLTexture.cpp  OpenGLTexture.hpp
src/lib/game_engine/math/: AABox.cpp  AABox.hpp  Geometry.cpp  Geometry.hpp  HelpFunctions.cpp  HelpFunctions.hpp  Matrices.cpp  Matrices.hpp  Plane.cpp  Plane.hpp  Point.hpp  RNG.cpp  RNG.hpp  RNGenerator.cpp  RNGenerator.hpp  Real.hpp  Types.cpp  Types.hpp  Vec3.cpp  Vec3.hpp  Vector.hpp  Vector3.cpp  Vector3.hpp
src/lib/game_engine/memory/: ArrayAllocator.cpp  ArrayAllocator.hpp  ExpandablePoolAllocator.cpp  ExpandablePoolAllocator.hpp  MemoryManager.cpp  MemoryManager.hpp  MemoryPage.cpp  MemoryPage.hpp  PoolAllocator.cpp  PoolAllocator.hpp  StackAllocator.cpp  StackAllocator.hpp
src/lib/game_engine/opengl/: OpenGLCamera.cpp  OpenGLCamera.hpp  OpenGLContext.cpp  OpenGLContext.hpp  OpenGLFont.cpp  OpenGLFont.hpp  OpenGLIncludes.hpp  OpenGLLoadTexture.cpp  OpenGLLoadTexture.hpp  OpenGLMath.cpp  OpenGLMath.hpp  OpenGLObject.cpp  OpenGLObject.hpp  OpenGLRenderer.cpp  OpenGLRenderer.hpp  OpenGLShaderVariables.hpp  OpenGLShaders.cpp  OpenGLShaders.hpp  OpenGLTexture.cpp  OpenGLTexture.hpp
src/lib/game_engine/opengl/common/: OpenGLLoadShaders.cpp  OpenGLLoadShaders.hpp
src/lib/game_engine/physics/: Collision.cpp  Collision.hpp  Geometry.cpp  Geometry.hpp  HelpFunctions.cpp  HelpFunctions.hpp  MathHelp.cpp  MathHelp.hpp  Matrices.cpp  Matrices.hpp  PhysicsEngine.cpp  PhysicsEngine.hpp  PhysicsObject.cpp  PhysicsObject.hpp  Types.hpp
src/lib/game_engine/utility/: BasicFunctions.cpp  BasicFunctions.hpp  BidirectionalAstar.cpp  BidirectionalAstar.hpp  CircularBuffer.hpp  Events.cpp  Events.hpp  FIFOWorker.cpp  FIFOWorker.hpp  HashTable.hpp  List.hpp  QuadTree.hpp  QuadTreeBoxes.hpp  Task.hpp  UniformGrid.hpp  kdquadtree.hpp  kdtree.hpp
src/shaders/: FragmentShader.glsl  FragmentShaderFinalPass.glsl  FragmentShaderGBuffer.glsl  FragmentShaderModelTextureOnly.glsl  FragmentShaderQuad.glsl  FragmentShaderSSAO.glsl  FragmentShaderShadowMap.glsl  FragmentShaderSimple.glsl  FragmentShaderSkybox.glsl  FragmentShaderStandard.glsl  FragmentShaderVerticesColor.glsl  FragmentShaderWater.glsl  GeometryShaderDrawNormals.glsl  GeometryShaderExplode.glsl  GeometryShaderWater.glsl  TesselationControlShaderWater.glsl  TesselationEvaluationShaderWater.glsl  TextFragmentShader.glsl  VertexShader.glsl  VertexShaderDrawNormals.glsl  VertexShaderFinalPass.glsl  VertexShaderGBuffer.glsl  VertexShaderGBufferInstnaced.glsl  VertexShaderModelTextureOnly.glsl  VertexShaderQuad.glsl  VertexShaderShadowMap.glsl  VertexShaderSimple.glsl  VertexShaderSkybox.glsl  VertexShaderText.glsl  VertexShaderVerticesColor.glsl  VertexShaderWater.glsl
src/shaders/PostProcessing/: FragmentShaderBlur.glsl  FragmentShaderSeparableAO.glsl  VertexShaderBlur.glsl
src/shaders/Terrain/: FragmentShaderDisplacement.glsl  FragmentShaderDisplacementDrawNormals.glsl  FragmentShaderWater.glsl  GeometryShaderDisplacementDrawNormals.glsl  TesselationControlShaderDisplacement.glsl  TesselationEvaluationShaderDisplacement.glsl  TessellationControlShaderDisplacement.glsl  TessellationEvaluationShaderDisplacementDrawNormals.glsl  (+2 more)
